--- a/ToRenameUI/MainWindow.xaml
+++ b/ToRenameUI/MainWindow.xaml
@@ -7,6 +7,37 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <TabControl>
+            <TabItem Header="Главная">
+                <Grid Background="#FFE5E5E5">
+                    <TextBox x:Name="TextBoxSource" HorizontalAlignment="Left" Height="23" Margin="10,59,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="313" IsEnabled="False"/>
+                    <TextBox x:Name="TextBoxSaveIn" HorizontalAlignment="Left" Height="24" Margin="10,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="313" IsEnabled="False"/>
+                    <Label Content="Источник" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Width="64"/>
+                    <Label Content="Сохранить в" HorizontalAlignment="Left" Margin="10,101,0,0" VerticalAlignment="Top" Width="82"/>
+                    <Button x:Name="ButtonChooseSource" Content=". . ." HorizontalAlignment="Left" Margin="328,59,0,0" VerticalAlignment="Top" Height="23" Width="35"/>
+                    <Button x:Name="ButtonSaveIn" Content=". . ." HorizontalAlignment="Left" Margin="328,132,0,0" VerticalAlignment="Top" Height="24" Width="35"/>
+                    <DataGrid x:Name="DataGridOptionList" HorizontalAlignment="Left" Height="197" Margin="10,199,0,0" VerticalAlignment="Top" Width="353" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+                    <DataGrid x:Name="DataGridToDoList" HorizontalAlignment="Left" Height="197" Margin="437,199,0,0" VerticalAlignment="Top" Width="353                   " d:ItemsSource="{d:SampleData ItemCount=5}"/>
+                    <Button x:Name="ButtonAddOption" Content="&gt;" HorizontalAlignment="Left" Margin="383,242,0,0" VerticalAlignment="Top" Width="34"/>
+                    <Button x:Name="ButtonRemoveOption" Content="&lt;" HorizontalAlignment="Left" Margin="383,292,0,0" VerticalAlignment="Top" Width="34"/>
+                    <Label Content="Список возможностей" HorizontalAlignment="Left" Margin="10,168,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Задействовать" HorizontalAlignment="Left" Margin="437,168,0,0" VerticalAlignment="Top"/>
+                    <Button x:Name="ButtonLaunch" Content="Пуск" HorizontalAlignment="Left" Margin="694,132,0,0" VerticalAlignment="Top" Height="24" Width="90"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Опции">
+                <Grid Background="#FFE5E5E5">
+                    <TextBox x:Name="TextBoxOptionFrom" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" Height="23"/>
+                    <TextBox x:Name="TextBoxOptionTo" HorizontalAlignment="Left" Margin="229,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" Height="23"/>
+                    <ComboBox x:Name="ComboBoxAddOption" HorizontalAlignment="Left" Margin="431,41,0,0" VerticalAlignment="Top" Width="150" Height="23"/>
+                    <Button x:Name="ButtonAddChangeOption" Content="Добавить" HorizontalAlignment="Left" Margin="634,40,0,0" VerticalAlignment="Top" Height="23" Width="150"/>
+                    <DataGrid x:Name="DataGridTabOptionOptionList" HorizontalAlignment="Left" Height="242" Margin="10,154,0,0" VerticalAlignment="Top" Width="343" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+                    <DataGrid x:Name="DataGridDeleteOptionList" HorizontalAlignment="Left" Height="242" Margin="441,154,0,0" VerticalAlignment="Top" Width="343" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+                    <Button x:Name="ButtonAddToDeleteList" Content=">" HorizontalAlignment="Center" Margin="0,203,0,0" VerticalAlignment="Top" Width="34"/>
+                    <Button x:Name="ButtonFromRemoveList" Content="&lt;" HorizontalAlignment="Center" Margin="0,255,0,0" VerticalAlignment="Top" Width="34"/>
+                    <Button x:Name="ButtonToDelete" Content="Удалить" HorizontalAlignment="Left" Margin="689,124,0,0" VerticalAlignment="Top" Height="24" Width="95"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
