Realize Add Delete Actions

--- a/ToRenameUI/MainWindow.xaml
+++ b/ToRenameUI/MainWindow.xaml
@@ -11,11 +11,11 @@
             <TabItem Header="Главная">
                 <Grid Background="#FFE5E5E5">
                     <TextBox x:Name="TextBoxSource" HorizontalAlignment="Left" Height="23" Margin="10,59,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="313" IsEnabled="False"/>
-                    <TextBox x:Name="TextBoxSaveIn" HorizontalAlignment="Left" Height="24" Margin="10,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="313" IsEnabled="False"/>
+                    <TextBox x:Name="TextBoxSaveTo" HorizontalAlignment="Left" Height="24" Margin="10,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="313" IsEnabled="False"/>
                     <Label Content="Источник" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Width="64"/>
                     <Label Content="Сохранить в" HorizontalAlignment="Left" Margin="10,101,0,0" VerticalAlignment="Top" Width="82"/>
-                    <Button x:Name="ButtonChooseSource" Content=". . ." HorizontalAlignment="Left" Margin="328,59,0,0" VerticalAlignment="Top" Height="23" Width="35"/>
-                    <Button x:Name="ButtonSaveIn" Content=". . ." HorizontalAlignment="Left" Margin="328,132,0,0" VerticalAlignment="Top" Height="24" Width="35"/>
+                    <Button x:Name="ButtonChooseSource" Content=". . ." HorizontalAlignment="Left" Margin="328,59,0,0" VerticalAlignment="Top" Height="23" Width="35" Click="ButtonChooseSource_Click"/>
+                    <Button x:Name="ButtonSaveIn" Content=". . ." HorizontalAlignment="Left" Margin="328,132,0,0" VerticalAlignment="Top" Height="24" Width="35" Click="ButtonSaveIn_Click"/>
                     <DataGrid x:Name="DataGridOptionList" HorizontalAlignment="Left" Height="197" Margin="10,199,0,0" VerticalAlignment="Top" Width="353" d:ItemsSource="{d:SampleData ItemCount=5}" GridLinesVisibility="None" FontStretch="Medium" AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="До" Binding="{Binding Path=From}"   Width="110"/>
@@ -25,7 +25,7 @@
                             <DataGridTextColumn Header="Опция" Binding="{Binding  Path=Option.Name}"   Width="110"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <DataGrid x:Name="DataGridToDoList" HorizontalAlignment="Left" Height="197" Margin="431,199,0,0" VerticalAlignment="Top" Width="353 " d:ItemsSource="{d:SampleData ItemCount=5}">
+                    <DataGrid x:Name="DataGridToDoList" HorizontalAlignment="Left" Height="197" Margin="431,199,0,0" VerticalAlignment="Top" Width="353 " d:ItemsSource="{d:SampleData ItemCount=5}" GridLinesVisibility="None" AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="До" Binding="{Binding Path=From}"   Width="110"/>
                             <DataGridTextColumn Header="После" Binding="{Binding Path=To}"   Width="110"/>
@@ -50,9 +50,9 @@
                 <Grid Background="#FFE5E5E5">
                     <TextBox x:Name="TextBoxOptionFrom" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" Height="23"/>
                     <TextBox x:Name="TextBoxOptionTo" HorizontalAlignment="Left" Margin="229,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" Height="23"/>
-                    <ComboBox x:Name="ComboBoxAddOption" HorizontalAlignment="Left" Margin="431,41,0,0" VerticalAlignment="Top" Width="150" Height="23"/>
-                    <Button x:Name="ButtonAddChangeOption" Content="Добавить" HorizontalAlignment="Left" Margin="612,70,0,0" VerticalAlignment="Top" Height="23" Width="150"/>
-                    <DataGrid x:Name="DataGridTabOptionOptionList" HorizontalAlignment="Left" Height="242" Margin="10,154,0,0" VerticalAlignment="Top" Width="343" d:ItemsSource="{d:SampleData ItemCount=5}">
+                    <ComboBox x:Name="ComboBoxAddOption" HorizontalAlignment="Left" Margin="431,41,0,0" VerticalAlignment="Top" Width="150" Height="23" DisplayMemberPath="Name"/>
+                    <Button x:Name="ButtonAddChangeOption" Content="Добавить" HorizontalAlignment="Left" Margin="612,70,0,0" VerticalAlignment="Top" Height="23" Width="150" Click="ButtonAddChangeOption_Click"/>
+                    <DataGrid x:Name="DataGridTabOptionOptionList" HorizontalAlignment="Left" Height="242" Margin="10,154,0,0" VerticalAlignment="Top" Width="343" d:ItemsSource="{d:SampleData ItemCount=5}" AutoGenerateColumns="False" GridLinesVisibility="None">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="До" Binding="{Binding Path=From}"   Width="110"/>
                             <DataGridTextColumn Header="После" Binding="{Binding Path=To}"   Width="110"/>
@@ -61,7 +61,7 @@
                             <DataGridTextColumn Header="Опция" Binding="{Binding  Path=Option.Name}"   Width="110"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <DataGrid x:Name="DataGridDeleteOptionList" HorizontalAlignment="Left" Height="242" Margin="441,154,0,0" VerticalAlignment="Top" Width="343" d:ItemsSource="{d:SampleData ItemCount=5}">
+                    <DataGrid x:Name="DataGridDeleteOptionList" HorizontalAlignment="Left" Height="242" Margin="441,154,0,0" VerticalAlignment="Top" Width="343" d:ItemsSource="{d:SampleData ItemCount=5}" GridLinesVisibility="None" AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="До" Binding="{Binding Path=From}"   Width="110"/>
                             <DataGridTextColumn Header="После" Binding="{Binding Path=To}"   Width="110"/>
@@ -76,8 +76,8 @@
                             Выберите действие из списка возможностей
                         </TextBlock>
                     </Popup>
-                    <Button x:Name="ButtonFromRemoveList" Content="&lt;" HorizontalAlignment="Center" Margin="0,255,0,0" VerticalAlignment="Top" Width="34" Click="ButtonFromRemoveList_Click"/>
-                    <Button x:Name="ButtonToDelete" Content="Удалить" HorizontalAlignment="Left" Margin="689,124,0,0" VerticalAlignment="Top" Height="24" Width="95"/>
+                    <Button x:Name="ButtonFromRemoveList" Content="&lt;" HorizontalAlignment="Center" Margin="0,255,0,0" VerticalAlignment="Top" Width="34" Click="ButtonFromRemoveList_Click_1"/>
+                    <Button x:Name="ButtonToDelete" Content="Удалить" HorizontalAlignment="Left" Margin="689,124,0,0" VerticalAlignment="Top" Height="24" Width="95" Click="ButtonToDelete_Click"/>
                     <DatePicker x:Name="DatePickerStart" HorizontalAlignment="Left" Margin="431,69,0,0" VerticalAlignment="Top" Width="150"/>
                     <DatePicker x:Name="DayePickerEnd" HorizontalAlignment="Left" Margin="431,98,0,0" VerticalAlignment="Top" Width="150"/>
                 </Grid>
